--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Geometric Art</title>
+  <base href="https://djoshuac.github.io/geometric-art/">
   <link rel="icon" href="./favicon.png">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
