Add color options

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Geometric Art</title>
-  <base href="https://djoshuac.github.io/geometric-art/">
+  <!-- <base href="https://djoshuac.github.io/geometric-art/"> -->
   <link rel="icon" href="./favicon.png">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
@@ -14,12 +14,14 @@
     <input type="number" id="height">
     <button id="recompute">Recompute</button>
     <button id="download">Download</button>
+    <span id="colors"></span>
   </div class="form">
 
-  <div id="svg-container"></div>
+  <span id="svg-container"></div>
 
   <script src="./js/helper.js"></script>
   <script src="./js/generate.js"></script>
+  <script src="./js/color-input.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
