User add new colors

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button id="recompute">Recompute</button>
     <button id="download">Download</button>
     <span id="colors"></span>
+    <button id="add-color">Add Color</button>
   </div class="form">
 
   <span id="svg-container"></div>
