--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="add-color">Add Color</button>
   </div class="form">
 
-  <span id="svg-container"></div>
+  <div id="svg-container"></div>
 
   <script src="./js/helper.js"></script>
   <script src="./js/generate.js"></script>
