--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" id="width">
     <label>x</label>
     <input type="number" id="height">
-    <button id="recompute">Recompute</button>
+    <button id="randomize">Randomize</button>
     <button id="download">Download</button>
     <span id="colors"></span>
     <button id="add-color">Add Color</button>
