sample colors from images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <button id="download">Download</button>
     <span id="colors"></span>
     <button id="add-color">Add Color</button>
+    <input id="upload-image" type="file" accept="image/png, image/jpeg">
+    <label>Sample Colors:</label>
+    <input type="number" id="n-colors">
   </div class="form">
 
   <div id="svg-container"></div>
@@ -23,6 +26,7 @@
   <script src="./js/helper.js"></script>
   <script src="./js/generate.js"></script>
   <script src="./js/color-input.js"></script>
+  <script src="./js/image.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
