style file input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <button id="download">Download</button>
     <span id="colors"></span>
     <button id="add-color">Add Color</button>
-    <input id="upload-image" type="file" accept="image/png, image/jpeg">
+    <input id='upload-image' type='file' accept="image/png, image/jpeg" hidden>
+    <button id='upload-image-button' type='button'>Sample Image</button>
     <label>Sample Colors:</label>
     <input type="number" id="n-colors">
   </div class="form">
