remove unused class

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-  <div class="form">
+  <div>
     <label>Dimensions:</label>
     <input type="number" id="width">
     <label>x</label>
@@ -20,7 +20,7 @@
     <button id='upload-image-button' type='button'>Sample Image</button>
     <label>Sample Colors:</label>
     <input type="number" id="n-colors">
-  </div class="form">
+  </div>
 
   <div id="svg-container"></div>
 
