detect screen aspect ratio

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="number" id="height">
         <label>x</label>
         <input type="number" id="width">
+        <button id="use-screen">Reset</button>
       </span>
       <span id='submenu-colors'>
         <span id="colors"></span>
