see how svg fits screen

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
       <li class='menu-separator'>|</li>
       <li id="randomize">Randomize</li>
       <li id="download">Download</li>
+      <li id="test">Test</li>
     </ul>
     <div class='submenu'>
       <span id='submenu-dimensions'>
         <input type="number" id="height">
         <label>x</label>
         <input type="number" id="width">
+        <input type="number" id="size" class='hidden'>
         <button id="use-screen">Reset</button>
       </span>
       <span id='submenu-colors'>
