implement herringbone pattern

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div class='menu'>
     <ul class='menu-actions'>
+      <li id='menu-patterns'>Patterns</li>
       <li id='menu-dimensions'>Dimensions</li>
       <li id='menu-colors'>Colors</li>
       <li id='menu-sample-image'>Sample Image</li>
@@ -17,6 +18,10 @@
       <li id="test">Test</li>
     </ul>
     <div class='submenu'>
+      <span id='submenu-patterns'>
+        <button id='pattern-normal' value='normal'>Normal</button>
+        <button id='pattern-herringbone' value='herringbone'>Herringbone</button>
+      </span>
       <span id='submenu-dimensions'>
         <input class='text' type="number" id="height">
         <label>x</label>
