--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <span id='submenu-patterns'>
         <button id='pattern-normal' value='normal'>Normal</button>
         <button id='pattern-herringbone' value='herringbone'>Herringbone</button>
+        <button id='pattern-kites' value='kites'>Kites</button>
       </span>
       <span id='submenu-dimensions'>
         <input class='text' type="number" id="height">
