--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id='pattern-normal' value='normal'>Normal</button>
         <button id='pattern-herringbone' value='herringbone'>Herringbone</button>
         <button id='pattern-kites' value='kites'>Kites</button>
+        <button id='pattern-palette' value='palette'>Palette</button>
       </span>
       <span id='submenu-dimensions'>
         <input class='text' type="number" id="height">
