reword some actions to be more clear

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <li id='menu-sample-image'>Sample Image</li>
       <li id='menu-download'>Download</li>
       <li class='menu-separator'>|</li>
-      <li id="randomize">Randomize</li>
-      <li id="test">Test</li>
+      <li id="main-menu-randomize">Randomize</li>
+      <li id="main-menu-full-screen">Full Screen</li>
     </ul>
     <div class='submenu'>
       <span id='submenu-patterns'>
@@ -29,7 +29,7 @@
         <label>x</label>
         <input class='text' type="number" id="width">
         <input type="number" id="size" class='hidden'>
-        <button id="use-screen">Reset</button>
+        <button id="use-screen">Fit to Screen</button>
       </span>
       <span id='submenu-colors'>
         <span id="colors"></span>
