support common dimensions

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <label>x</label>
         <input class='text' type="number" id="height">
         <input type="number" id="size" class='hidden'>
+        <button class="dimWidthByHeight">2x2</button>
+        <button class="dimWidthByHeight">3x3</button>
+        <button class="dimWidthByHeight">9x16</button>
+        <button class="dimWidthByHeight">10x16</button>
+        <button class="dimWidthByHeight">16x9</button>
+        <button class="dimWidthByHeight">16x10</button>
         <button id="use-screen">Fit to Screen</button>
       </span>
       <span id='submenu-colors'>
